refactor: implement mise for tool version management
- Use mise to manage Ruby, Node.js, and Python versions
- Extract static PATH from 'mise env' to avoid runtime overhead
- Add entrypoint wrapper to source mise PATH in containers
- Remove mise binary after build to prevent workspace .mise.toml detection
- Fixes 'Argument list too long' error when mounting workspace

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -21,6 +21,7 @@ RUN apt-get update && \
   gh \
   git \
   gpg \
+  gpg-agent \
   less \
   libc6-dev-riscv64-cross \
   libelf-dev \
@@ -29,12 +30,7 @@ RUN apt-get update && \
   libyaml-dev \
   libz3-dev \
   minisat \
-  nodejs \
-  npm \
   parallel \
-  python3 \
-  python3-pip \
-  python3.12-venv \
   rustc \
   shellcheck \
   sudo \
@@ -44,14 +40,31 @@ RUN apt-get update && \
   && apt-get autoremove -y \
   && rm -rf /var/lib/{apt,dpkg,cache,log}/*
 
-  # build / install ruby
+ENV MISE_DATA_DIR="/mise"
+ENV MISE_CONFIG_DIR="/mise"
+ENV MISE_CACHE_DIR="/mise/cache"
+# MISE_STATE_DIR needed to prevent permission errors in CI when mise tries to track configs
+# Without this, mise defaults to ~/.local/state which isn't writable by non-root CI users
+ENV MISE_STATE_DIR="/mise/state"
+ENV MISE_INSTALL_PATH="/usr/local/bin/mise"
+ENV MISE_YES=1
+
+RUN curl https://mise.run | sh
+
+COPY .mise.toml /opt/.mise.toml
 COPY .ruby-version /opt/.ruby-version
-ENV RUBY_YJIT_ENABLE=1
-RUN git clone --depth=1 https://github.com/rbenv/ruby-build.git && \
-    cd ruby-build && \
-    ./bin/ruby-build $(cat /opt/.ruby-version | tr -d "\n") /usr && \
-    cd .. && \
-    rm -rf ruby-build
+
+WORKDIR /opt
+RUN mise trust /opt/.mise.toml && \
+    mise settings set trusted_config_paths '~' && \
+    mise install --yes
+
+RUN chmod -R 777 /mise
+
+# Verify tools work after mise installation
+RUN cd /opt && \
+    mise env --shell bash | grep '^export PATH=' > /etc/profile.d/mise-path-temp.sh && \
+    bash -c 'source /etc/profile.d/mise-path-temp.sh && ruby --version && node --version && npm --version && python3 --version'
 
 # build/install eqntott
 RUN git clone --depth=1 https://github.com/TheProjecter/eqntott.git && \
@@ -82,16 +95,17 @@ RUN git clone https://github.com/jar-ben/mustool.git && \
 
 # Create Python virtual environment and install packages
 COPY requirements.txt /opt/requirements.txt
-RUN /usr/bin/python3 -m venv /opt/venv && \
-  /opt/venv/bin/pip install -r /opt/requirements.txt && \
-  rm /opt/requirements.txt
+RUN bash -l -c 'python3 -m venv /opt/venv && \
+  /opt/venv/bin/pip install --no-cache-dir -r /opt/requirements.txt && \
+  rm /opt/requirements.txt'
 ENV PATH="/opt/venv/bin:$PATH"
 
 # Install npm packages globally in the container
 COPY package.json package-lock.json /opt/node/
-RUN cd /opt/node && \
-  /usr/bin/npm ci && \
-  rm /opt/node/package.json /opt/node/package-lock.json
+RUN bash -l -c 'cd /opt/node && \
+  npm ci --no-audit --no-fund && \
+  chown -R root:root /opt/node/node_modules && \
+  rm /opt/node/package.json /opt/node/package-lock.json'
 ENV NODE_PATH="/opt/node/node_modules"
 ENV PATH="/opt/node/node_modules/.bin:$PATH"
 ENV IN_UDB_CONTAINER=true
@@ -112,7 +126,19 @@ COPY tools/ruby-gems/udb-gen/lib/gem_versions.rb /opt/tools/ruby-gems/udb-gen/li
 COPY tools/ruby-gems/udb-gen/lib/udb-gen/version.rb /opt/tools/ruby-gems/udb-gen/lib/udb-gen/
 COPY tools/ruby-gems/udb_helpers/udb_helpers.gemspec /opt/tools/ruby-gems/udb_helpers/
 COPY tools/ruby-gems/udb_helpers/lib/udb_helpers/version.rb /opt/tools/ruby-gems/udb_helpers/lib/udb_helpers/
-RUN bundle install --gemfile /opt/Gemfile
+RUN bash -l -c 'bundle install --gemfile /opt/Gemfile'
+
+# Remove mise binary and unset MISE_* env vars to prevent workspace .mise.toml detection
+# Replace mise wrapper scripts (npm/npx) with direct symlinks to avoid "mise: command not found"
+# Tools remain accessible via the PATH extracted earlier to /etc/profile.d/mise-path.sh
+RUN rm -f /usr/local/bin/mise && \
+    rm -rf /mise/cache /mise/downloads && \
+    echo 'unset MISE_DATA_DIR MISE_CONFIG_DIR MISE_CACHE_DIR MISE_STATE_DIR MISE_INSTALL_PATH MISE_YES' >> /etc/bash.bashrc && \
+    for node_dir in /mise/installs/node/*/bin; do \
+        rm -f "$node_dir/npm" "$node_dir/npx" && \
+        ln -s ../lib/node_modules/npm/bin/npm-cli.js "$node_dir/npm" && \
+        ln -s ../lib/node_modules/npm/bin/npx-cli.js "$node_dir/npx"; \
+    done
 
 # the binaries for gems need to be copied in
 RUN mkdir -p /workspace/bin/container
@@ -124,3 +150,22 @@ ENV PATH="/workspace/bin/container:$PATH"
 # Grant the default ubuntu user sudo access
 RUN echo ubuntu ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/ubuntu \
     && chmod 0440 /etc/sudoers.d/ubuntu
+
+# Set complete PATH as ENV for Singularity compatibility (doesn't support ENTRYPOINT)
+# We use mise's 'latest' symlinks for Node and Ruby to avoid hardcoding versions
+# Python uses /opt/venv (with packages) instead of mise Python (without packages)
+ENV PATH="/workspace/bin/container:/opt/node/node_modules/.bin:/opt/venv/bin:/opt/bin:/mise/installs/node/latest/bin:/mise/installs/ruby/latest/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+
+# Create mise-path.sh with the final PATH for Docker ENTRYPOINT (matches ENV above)
+RUN echo "export PATH='/workspace/bin/container:/opt/node/node_modules/.bin:/opt/venv/bin:/opt/bin:/mise/installs/node/latest/bin:/mise/installs/ruby/latest/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'" > /etc/profile.d/mise-path.sh && \
+    chmod +x /etc/profile.d/mise-path.sh
+
+# Create a wrapper script that sources profile and executes commands
+RUN echo '#!/bin/bash' > /entrypoint.sh && \
+    echo 'source /etc/profile.d/mise-path.sh' >> /entrypoint.sh && \
+    echo 'exec "$@"' >> /entrypoint.sh && \
+    chmod +x /entrypoint.sh
+
+# Set ENTRYPOINT to the wrapper script
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["/bin/bash"]
